k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ideaboard
  labels:
    name: ideaboard
    app: ideaboard
